k8s/mimoto-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: mimoto-postgres
spec:
  selector:
    app: mimoto-postgres
  ports:
    - port: 5432
      targetPort: 5432

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mimoto-postgres
spec:
  selector:
    matchLabels:
      app: mimoto-postgres
  template:
    metadata:
      labels:
        app: mimoto-postgres
    spec:
      volumes:
        - name: mimoto-postgres-pvc
          persistentVolumeClaim:
            claimName: mimoto-postgres-pvc
      containers:
        - name: mimoto-postgres
          image: postgres
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: mimoto-postgres-pvc
              mountPath: /var/lib/postgresql/data
              subPath: mimoto/postgres
