k8s/mimoto.yaml
apiVersion: v1
kind: Service
metadata:
  name: mimoto
spec:
  selector:
    app: mimoto
  ports:
    - port: 8080
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mimoto
spec:
  selector:
    matchLabels:
      app: mimoto
  template:
    metadata:
      labels:
        app: mimoto
    spec:
      containers:
        - name: mimoto
          image: broswen/mimoto:1.0.0
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
        - name: redis
          image: redis
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 6379
      imagePullSecrets:
        - name: regcred
