k8s/mimoto-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mimoto-ingress
  labels:
    name: mimoto-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mimoto
                port:
                  number: 8080
